<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/str_name"
        android:padding="@dimen/pad10"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/etListName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/pad10"
        android:ems="10"
        android:hint="@string/hint_name"
        android:inputType="textPersonName" />
    
     <TextView
        android:padding="@dimen/pad10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/str_color"
        android:textAppearance="?android:attr/textAppearanceMedium" />
     
	<comp313.g2.smartgrocery.widgets.ColorPicker
	    android:id="@+id/cpListColor"
	    android:layout_marginBottom="@dimen/pad10"
	    android:layout_width="match_parent"
	    android:layout_height="109dp" >
	</comp313.g2.smartgrocery.widgets.ColorPicker>
	
	<View
    android:layout_width="match_parent"
    android:layout_height="1dip"
    android:background="?android:attr/dividerHorizontal" />
	
	<LinearLayout
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:measureWithLargestChild="true"
        android:orientation="horizontal"
        android:paddingEnd="2dip"
        android:paddingStart="2dip"
        android:paddingTop="4dip" >

        <Button
            android:id="@+id/btnCancel"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_weight="1"
            android:maxLines="2" 
            android:text="@string/btn_cancel"/>

        <Button
            android:id="@+id/btnAdd"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:maxLines="2"
            android:text="@string/btn_add" />
    </LinearLayout>
</LinearLayout>
